# vEDR

./: CMakeLists.txt  README.md
SCLoader/: CMakeLists.txt  main.cpp  main1.cpp  xor.cpp  xor.h
vEDR_DLL/: CMakeLists.txt  main.cpp
vEDR_DLL/lib/minhook/: .gitignore
vEDR_DLL/logger/: logger.cpp  logger.h
vEDR_UA/: CMakeLists.txt  main.cpp
